--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.0-alpha.2",
     "lucide-react": "^0.468.0",
-    "motion": "^12.0.0-alpha.2",
+    "motion": "^11.15.0",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
