--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "mapbox-gl": "^3.9.1",
     "motion": "^11.15.0",
     "next": "15.0.4",
+    "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "react-photo-view": "^1.2.7",
     "react-responsive": "^10.0.0",
+    "rehype-highlight": "^7.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/axios": "^0.14.4",
     "@types/node": "^20",
     "@types/react": "^19",
