--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
       "warn",
       { "argsIgnorePattern": "^_" }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@next/next/no-img-element": "off" 
   },
   "settings": {
     "react": {
