--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@next/third-parties": "^15.2.0",
-    "axios": "^1.7.9",
+    "@next/third-parties": "^15.5.4",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "html-to-image": "^1.11.11",
-    "lucide-react": "^0.468.0",
-    "mapbox-gl": "^3.9.1",
-    "motion": "^11.15.0",
-    "next": "15.0.4",
-    "nextjs-toploader": "^3.7.15",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
+    "html-to-image": "^1.11.13",
+    "lucide-react": "^0.545.0",
+    "mapbox-gl": "^3.15.0",
+    "motion": "^11.18.2",
+    "next": "15.5.4",
+    "nextjs-toploader": "^3.9.17",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-markdown": "^9.1.0",
     "react-photo-view": "^1.2.7",
-    "react-responsive": "^10.0.0",
-    "rehype-highlight": "^7.0.1",
-    "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-responsive": "^10.0.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/axios": "^0.14.4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.19.20",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3"
   }
 }
