--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-NEXT_PUBLIC_API_BASE_URL=
+NEXT_PUBLIC_DIRECTUS_URL=http://localhost:8055
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8055
+DIRECTUS_INTERNAL_URL=http://directus:8055
+DIRECTUS_STATIC_TOKEN=
+
 API_TOKEN=
+API_TIMEOUT_MS=10000
+
+NEXT_PUBLIC_MAPBOX_API_KEY=
+NEXT_PUBLIC_MAPBOX_STYLE=
