--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# directus runtime data
+cms/data/
+cms/uploads/
+cms/extensions/node_modules/
