--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,62 @@
+# Copy this file to `.env` in the raiz do projeto.
+# Configure tudo aqui (inclusive Directus). Em produção, defina as mesmas chaves
+
+# Frontend / Integração CMS
 NEXT_PUBLIC_DIRECTUS_URL=http://localhost:8055
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8055
 DIRECTUS_INTERNAL_URL=http://directus:8055
 DIRECTUS_STATIC_TOKEN=
-
 API_TOKEN=
 API_TIMEOUT_MS=10000
-
 NEXT_PUBLIC_MAPBOX_API_KEY=
 NEXT_PUBLIC_MAPBOX_STYLE=
+
+# Banco de dados Directus
+DB_USER=directus
+DB_PASSWORD=directus
+DB_DATABASE=directus
+DB_HOST=directus-database
+DB_PORT=5432
+
+# Cache (Redis)
+CACHE_ENABLED=true
+CACHE_AUTO_PURGE=true
+CACHE_STORE=redis
+REDIS_URL=redis://directus-cache:6379
+
+# Configuração do Directus
+DIRECTUS_SECRET=6116487b-cda1-52c2-b5b5-c8022c45e263
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=d1r3ctu5
+WEBSOCKETS_ENABLED=true
+PUBLIC_URL=http://localhost:8055
+CORS_ENABLED=true
+CORS_ORIGIN=http://localhost:3000
+
+# Cookies
+REFRESH_TOKEN_COOKIE_SECURE=false
+REFRESH_TOKEN_COOKIE_SAME_SITE=lax
+REFRESH_TOKEN_COOKIE_DOMAIN=localhost
+SESSION_COOKIE_SECURE=false
+SESSION_COOKIE_SAME_SITE=lax
+SESSION_COOKIE_DOMAIN=localhost
+
+# Extensões & storage
+EXTENSIONS_PATH=./extensions
+EXTENSIONS_AUTO_RELOAD=true
+STORAGE_LOCATIONS=local
+STORAGE_DEFAULT=local
+STORAGE_LOCAL_DRIVER=local
+STORAGE_LOCAL_ROOT=/directus/uploads
+STORAGE_LOCAL_PUBLIC_URL=http://localhost:8055/assets
+
+# Conteúdo embutido / segurança
+CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC=http://localhost:3000,http://localhost:4321,http://localhost:5173,https://*.youtube.com,https://*.vimeo.com,https://*.wistia.net,https://*.loom.com
+
+# E-mail (opcional)
+EMAIL_TRANSPORT=
+EMAIL_FROM=
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=
+EMAIL_SMTP_USER=
+EMAIL_SMTP_PASSWORD=
