--- a/cms/.env.example
+++ b/cms/.env.example
@@ -1,3 +1,6 @@
+# OBS: este arquivo fica apenas como referência. A stack carrega as variáveis
+# do Directus a partir do `.env` na raiz do projeto.
+
 # Database Configuration
 DB_USER=directus
 DB_PASSWORD=directus
