--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -30,8 +30,56 @@ services:
     restart: unless-stopped
     ports:
       - "8055:8055"
-    env_file:
-      - ../cms/.env
+    environment:
+      SECRET: ${DIRECTUS_SECRET:-6116487b-cda1-52c2-b5b5-c8022c45e263}
+
+      DB_CLIENT: "pg"
+      DB_HOST: ${DB_HOST:-directus-database}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_DATABASE: ${DB_DATABASE:-directus}
+      DB_USER: ${DB_USER:-directus}
+      DB_PASSWORD: ${DB_PASSWORD:-directus}
+
+      CACHE_ENABLED: ${CACHE_ENABLED:-true}
+      CACHE_AUTO_PURGE: ${CACHE_AUTO_PURGE:-true}
+      CACHE_STORE: ${CACHE_STORE:-redis}
+      REDIS: ${REDIS_URL:-redis://directus-cache:6379}
+
+      ADMIN_EMAIL: ${ADMIN_EMAIL:-admin@example.com}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-d1r3ctu5}
+
+      WEBSOCKETS_ENABLED: ${WEBSOCKETS_ENABLED:-true}
+
+      PUBLIC_URL: ${PUBLIC_URL:-http://localhost:8055}
+
+      CORS_ENABLED: ${CORS_ENABLED:-true}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3000}
+
+      REFRESH_TOKEN_COOKIE_SECURE: ${REFRESH_TOKEN_COOKIE_SECURE:-false}
+      REFRESH_TOKEN_COOKIE_SAME_SITE: ${REFRESH_TOKEN_COOKIE_SAME_SITE:-lax}
+      REFRESH_TOKEN_COOKIE_DOMAIN: ${REFRESH_TOKEN_COOKIE_DOMAIN:-localhost}
+
+      SESSION_COOKIE_SECURE: ${SESSION_COOKIE_SECURE:-false}
+      SESSION_COOKIE_SAME_SITE: ${SESSION_COOKIE_SAME_SITE:-lax}
+      SESSION_COOKIE_DOMAIN: ${SESSION_COOKIE_DOMAIN:-localhost}
+
+      EXTENSIONS_PATH: ${EXTENSIONS_PATH:-./extensions}
+      EXTENSIONS_AUTO_RELOAD: ${EXTENSIONS_AUTO_RELOAD:-true}
+
+      CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC: ${CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC:-http://localhost:3000,http://localhost:4321,http://localhost:5173,https://*.youtube.com,https://*.vimeo.com,https://*.wistia.net,https://*.loom.com}
+
+      EMAIL_TRANSPORT: ${EMAIL_TRANSPORT:-}
+      EMAIL_FROM: ${EMAIL_FROM:-}
+      EMAIL_SMTP_HOST: ${EMAIL_SMTP_HOST:-}
+      EMAIL_SMTP_PORT: ${EMAIL_SMTP_PORT:-}
+      EMAIL_SMTP_USER: ${EMAIL_SMTP_USER:-}
+      EMAIL_SMTP_PASSWORD: ${EMAIL_SMTP_PASSWORD:-}
+
+      STORAGE_LOCATIONS: ${STORAGE_LOCATIONS:-local}
+      STORAGE_DEFAULT: ${STORAGE_DEFAULT:-local}
+      STORAGE_LOCAL_DRIVER: ${STORAGE_LOCAL_DRIVER:-local}
+      STORAGE_LOCAL_ROOT: ${STORAGE_LOCAL_ROOT:-/directus/uploads}
+      STORAGE_LOCAL_PUBLIC_URL: ${STORAGE_LOCAL_PUBLIC_URL:-http://localhost:8055/assets}
     depends_on:
       directus-database:
         condition: service_healthy
@@ -53,13 +101,16 @@ services:
       - traefik.http.routers.categorizabrasil.entrypoints=websecure
       - traefik.http.routers.categorizabrasil.tls=true
       - traefik.http.services.categorizabrasil.loadbalancer.server.port=3000
-    env_file:
-      - ../.env
     environment:
-      NODE_ENV: production
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_DIRECTUS_URL:-http://localhost:8055}
+      NODE_ENV: ${NODE_ENV:-production}
       NEXT_PUBLIC_DIRECTUS_URL: ${NEXT_PUBLIC_DIRECTUS_URL:-http://localhost:8055}
-      DIRECTUS_INTERNAL_URL: http://directus:8055
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:8055}
+      DIRECTUS_INTERNAL_URL: ${DIRECTUS_INTERNAL_URL:-http://directus:8055}
+      DIRECTUS_STATIC_TOKEN: ${DIRECTUS_STATIC_TOKEN:-}
+      API_TOKEN: ${API_TOKEN:-}
+      API_TIMEOUT_MS: ${API_TIMEOUT_MS:-10000}
+      NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY:-}
+      NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE:-}
     depends_on:
       directus:
         condition: service_started
