--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -93,6 +93,15 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_DIRECTUS_URL: ${NEXT_PUBLIC_DIRECTUS_URL:-http://localhost:8055}
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:8055}
+        DIRECTUS_INTERNAL_URL: ${DIRECTUS_INTERNAL_URL:-http://directus:8055}
+        DIRECTUS_STATIC_TOKEN: ${DIRECTUS_STATIC_TOKEN:-}
+        API_TOKEN: ${API_TOKEN:-}
+        API_TIMEOUT_MS: ${API_TIMEOUT_MS:-10000}
+        NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY:-}
+        NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE:-}
     ports:
       - "3001:3000"
     labels:
