--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,8 +1,5 @@
 name: categorizabrasil-stack
 
-env_file:
-  - ../.env
-
 services:
   directus-database:
     image: postgis/postgis:16-master
@@ -12,7 +9,6 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     volumes:
-      # data persistente dentro do CMS
       - ../cms/data/database:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U \"$${POSTGRES_USER}\" -d \"$${POSTGRES_DB}\" -h localhost"]
@@ -42,7 +38,6 @@ services:
       - "${MINIO_API_PORT:-9000}:9000"
       - "${MINIO_CONSOLE_PORT:-9001}:9001"
     volumes:
-      # data persistente dentro do CMS
       - ../cms/data/minio:/data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -78,8 +73,61 @@ services:
         condition: service_completed_successfully
     ports:
       - "8055:8055"
-    env_file:
-      - ../.env
+    environment:
+      # Segurança / URL
+      SECRET: ${DIRECTUS_SECRET}
+      PUBLIC_URL: ${PUBLIC_URL}
+      TRUST_PROXY: "true"
+      WEBSOCKETS_ENABLED: "true"
+
+      # Banco
+      DB_CLIENT: "pg"
+      DB_HOST: directus-database
+      DB_PORT: "5432"
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+
+      CACHE_ENABLED: ${CACHE_ENABLED}
+      CACHE_AUTO_PURGE: ${CACHE_AUTO_PURGE}
+      CACHE_STORE: "redis"
+      REDIS_URL: "redis://directus-cache:6379"
+
+      # Admin bootstrap (remover depois que criar o usuário)
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+
+      # CORS
+      CORS_ENABLED: "true"
+      CORS_ORIGIN: ${CORS_ORIGIN}
+
+      # Cookies (produção)
+      REFRESH_TOKEN_COOKIE_SECURE: "true"
+      REFRESH_TOKEN_COOKIE_SAME_SITE: "lax"
+      REFRESH_TOKEN_COOKIE_DOMAIN: "painel.categorizabrasil.com.br"
+      SESSION_COOKIE_SECURE: "true"
+      SESSION_COOKIE_SAME_SITE: "lax"
+      SESSION_COOKIE_DOMAIN: "painel.categorizabrasil.com.br"
+
+      # Extensões
+      EXTENSIONS_PATH: "./extensions"
+      EXTENSIONS_AUTO_RELOAD: "false"
+
+      # CSP mínima
+      CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC: "https://*.youtube.com,https://*.vimeo.com,https://*.wistia.net,https://*.loom.com"
+
+      # Armazenamento (MinIO)
+      STORAGE_LOCATIONS: "s3"
+      STORAGE_DEFAULT: "s3"
+      STORAGE_S3_DRIVER: "s3"
+      STORAGE_S3_BUCKET: ${STORAGE_S3_BUCKET}
+      STORAGE_S3_KEY: ${STORAGE_S3_KEY}
+      STORAGE_S3_SECRET: ${STORAGE_S3_SECRET}
+      STORAGE_S3_ENDPOINT: "http://directus-minio:9000"
+      STORAGE_S3_REGION: "us-east-1"
+      STORAGE_S3_FORCE_PATH_STYLE: "true"
+      STORAGE_S3_ROOT: "uploads"
+      STORAGE_S3_PUBLIC_URL: ${STORAGE_S3_PUBLIC_URL}
     volumes:
       - ../cms/extensions:/directus/extensions
 
@@ -112,7 +160,3 @@ services:
     ports:
       - "3001:3000"
     container_name: site-categoriza-prod
-
-volumes:
-  directus_db:
-  minio_data:
