--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -91,7 +91,7 @@ services:
       CACHE_ENABLED: ${CACHE_ENABLED}
       CACHE_AUTO_PURGE: ${CACHE_AUTO_PURGE}
       CACHE_STORE: "redis"
-      REDIS_URL: "redis://directus-cache:6379"
+      REDIS: "redis://directus-cache:6379"
 
       # Admin bootstrap (remover depois que criar o usuário)
       ADMIN_EMAIL: ${ADMIN_EMAIL}
