--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -106,6 +106,23 @@ services:
 
       CORS_ENABLED: "true"
       CORS_ORIGIN: ${CORS_ORIGIN}
+
+      STORAGE_LOCATIONS: "local,s3"
+      DEFAULT_STORAGE: "s3"
+
+      # local (opcional)
+      STORAGE_LOCAL_DRIVER: "local"
+      STORAGE_LOCAL_ROOT: "/directus/uploads"
+
+      # s3 (MinIO)
+      STORAGE_S3_DRIVER: "s3"
+      STORAGE_S3_BUCKET: ${MINIO_BUCKET}
+      STORAGE_S3_KEY: ${MINIO_ROOT_USER}
+      STORAGE_S3_SECRET: ${MINIO_ROOT_PASSWORD}
+      STORAGE_S3_REGION: "us-east-1"
+      STORAGE_S3_ENDPOINT: "http://directus-minio:9000"
+      STORAGE_S3_FORCE_PATH_STYLE: "true"
+
     volumes:
       - ../cms/extensions:/directus/extensions
 
