--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -147,6 +147,12 @@ services:
         condition: service_started
     ports:
       - "3001:3000"
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.categorizabrasil.rule=Host(`categorizarbrasil.com.br`,`www.categorizarbrasil.com.br`)
+      - traefik.http.routers.categorizabrasil.entrypoints=websecure
+      - traefik.http.routers.categorizabrasil.tls=true
+      - traefik.http.services.categorizabrasil.loadbalancer.server.port=3000
     container_name: site-categoriza-prod
     networks:
       - categorizanet
