--- a/.env.example
+++ b/.env.example
@@ -1,71 +1,106 @@
-# Frontend / Integração CMS
-NEXT_PUBLIC_DIRECTUS_URL=http://localhost:8055
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8055
-DIRECTUS_INTERNAL_URL=http://directus:8055
-DIRECTUS_STATIC_TOKEN=
-API_TOKEN=
-API_TIMEOUT_MS=10000
-NEXT_PUBLIC_MAPBOX_API_KEY=
-NEXT_PUBLIC_MAPBOX_STYLE=
+# ================================
+# Frontend / Integração CMS (PÚBLICO)
+# ================================
+NEXT_PUBLIC_DIRECTUS_URL=https://cms.seudominio.com
 
-# Banco de dados Directus
-DB_USER=directus
-DB_PASSWORD=directus
-DB_DATABASE=directus
+# Mapbox (público)
+NEXT_PUBLIC_MAPBOX_API_KEY=pk.XXXXXX_SUBSTITUIR
+NEXT_PUBLIC_MAPBOX_STYLE=mapbox://styles/usuario/estilo123
+
+# ================================
+# Directus (SERVIDOR)
+# ================================
+# URL pública do Directus (obrigatório https em prod)
+PUBLIC_URL=https://cms.seudominio.com
+TRUST_PROXY=true
+WEBSOCKETS_ENABLED=true
+
+# Tokens/segredos (gere valores novos e fortes para prod!)
+DIRECTUS_SECRET=CHANGE_ME__segredo_unico_forte
+DIRECTUS_STATIC_TOKEN=CHANGE_ME__token_estatico_se_precisar
+API_TOKEN=CHANGE_ME__se_teu_app_usar
+
+# Admin Bootstrap (usado só na primeira inicialização)
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+
+# CORS (origens permitidas)
+CORS_ENABLED=true
+CORS_ORIGIN=https://cms.seudominio.com,https://seudominio.com,https://www.seudominio.com
+
+# ================================
+# Banco de dados
+# ================================
+DB_CLIENT=pg
 DB_HOST=directus-database
 DB_PORT=5432
+DB_DATABASE=directus
+DB_USER=directus
+DB_PASSWORD=CHANGE_ME__senha_db_forte
 
-# Cache (Redis)
+# ================================
+# Cache / Rate Limit (Redis)
+# ================================
 CACHE_ENABLED=true
 CACHE_AUTO_PURGE=true
 CACHE_STORE=redis
-REDIS_URL=redis://directus-cache:6379
+REDIS=redis://directus-cache:6379
+RATE_LIMITER_STORE=redis
 
-# Configuração do Directus
-DIRECTUS_SECRET=6116487b-cda1-52c2-b5b5-c8022c45e263
-ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=d1r3ctu5
-WEBSOCKETS_ENABLED=true
-PUBLIC_URL=http://localhost:8055
-CORS_ENABLED=true
-CORS_ORIGIN=http://localhost:3000
-
-# Cookies
-REFRESH_TOKEN_COOKIE_SECURE=false
+# ================================
+# Cookies (produção em subdomínio)
+# ================================
+REFRESH_TOKEN_COOKIE_SECURE=true
 REFRESH_TOKEN_COOKIE_SAME_SITE=lax
-REFRESH_TOKEN_COOKIE_DOMAIN=localhost
-SESSION_COOKIE_SECURE=false
-SESSION_COOKIE_SAME_SITE=lax
-SESSION_COOKIE_DOMAIN=localhost
+REFRESH_TOKEN_COOKIE_DOMAIN=cms.seudominio.com
 
-# Extensões & storage
+SESSION_COOKIE_SECURE=true
+SESSION_COOKIE_SAME_SITE=lax
+SESSION_COOKIE_DOMAIN=cms.seudominio.com
+
+# ================================
+# Extensões
+# ================================
 EXTENSIONS_PATH=./extensions
-EXTENSIONS_AUTO_RELOAD=true
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
+EXTENSIONS_AUTO_RELOAD=false
+
+# ================================
+# Armazenamento de arquivos (MinIO/S3-compatível)
+# ================================
+MINIO_ROOT_USER=CHANGE_ME__minio_user
+MINIO_ROOT_PASSWORD=CHANGE_ME__minio_password
 MINIO_BUCKET=directus
 MINIO_REGION=us-east-1
 MINIO_API_PORT=9000
 MINIO_CONSOLE_PORT=9001
+
 STORAGE_LOCATIONS=s3
-STORAGE_DEFAULT=s3
+DEFAULT_STORAGE=s3
 STORAGE_S3_DRIVER=s3
 STORAGE_S3_BUCKET=directus
-STORAGE_S3_KEY=minioadmin
-STORAGE_S3_SECRET=minioadmin
+STORAGE_S3_KEY=${MINIO_ROOT_USER}
+STORAGE_S3_SECRET=${MINIO_ROOT_PASSWORD}
 STORAGE_S3_ENDPOINT=http://directus-minio:9000
 STORAGE_S3_REGION=us-east-1
 STORAGE_S3_FORCE_PATH_STYLE=true
 STORAGE_S3_ROOT=uploads
-STORAGE_S3_PUBLIC_URL=http://localhost:8055/assets
 
-# Conteúdo embutido / segurança
-CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC=http://localhost:3000,http://localhost:4321,http://localhost:5173,https://*.youtube.com,https://*.vimeo.com,https://*.wistia.net,https://*.loom.com
+# ================================
+# Content-Security-Policy (FRAME_SRC)
+# ================================
+CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_SRC=https://seudominio.com,https://www.seudominio.com,https://*.youtube.com,https://*.vimeo.com
 
+# ================================
 # E-mail (opcional)
-EMAIL_TRANSPORT=
-EMAIL_FROM=
-EMAIL_SMTP_HOST=
-EMAIL_SMTP_PORT=
-EMAIL_SMTP_USER=
-EMAIL_SMTP_PASSWORD=
+# ================================
+# EMAIL_TRANSPORT=smtp
+# EMAIL_FROM="App <no-reply@seudominio.com>"
+# EMAIL_SMTP_HOST=smtp.seuprovedor.com
+# EMAIL_SMTP_PORT=587
+# EMAIL_SMTP_USER=no-reply@seudominio.com
+# EMAIL_SMTP_PASSWORD=CHANGE_ME_strong_password
+
+# ================================
+# Interno (somente se o compose usar)
+# ================================
+DIRECTUS_INTERNAL_URL=http://directus:8055
