--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -131,6 +131,13 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_DIRECTUS_URL: ${NEXT_PUBLIC_DIRECTUS_URL}
+        DIRECTUS_INTERNAL_URL: ${DIRECTUS_INTERNAL_URL}
+        DIRECTUS_STATIC_TOKEN: ${DIRECTUS_STATIC_TOKEN}
+        API_TIMEOUT_MS: ${API_TIMEOUT_MS}
+        NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY}
+        NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE}
     restart: ${RESTART_POLICY:-unless-stopped}
     environment:
       NODE_ENV: ${NODE_ENV}
