--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ NEXT_PUBLIC_DIRECTUS_URL=https://cms.seudominio.com
 NEXT_PUBLIC_MAPBOX_API_KEY=pk.XXXXXX_SUBSTITUIR
 NEXT_PUBLIC_MAPBOX_STYLE=mapbox://styles/usuario/estilo123
 
+# reCAPTCHA
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=CHANGE_ME__site_key
+RECAPTCHA_SECRET_KEY=CHANGE_ME__secret_key
+
 # ================================
 # Directus (SERVIDOR)
 # ================================
