--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -133,6 +133,8 @@ services:
         API_TIMEOUT_MS: ${API_TIMEOUT_MS:-10000}
         NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY:-}
         NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE:-}
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY:-}
+        RECAPTCHA_SECRET_KEY: ${RECAPTCHA_SECRET_KEY:-}
     ports:
       - "3000:3000"
     volumes:
@@ -148,6 +150,8 @@ services:
       API_TIMEOUT_MS: ${API_TIMEOUT_MS:-10000}
       NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY:-}
       NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE:-}
+      NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY:-}
+      RECAPTCHA_SECRET_KEY: ${RECAPTCHA_SECRET_KEY:-}
     command: npm run dev
     depends_on:
       directus:
