--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -133,11 +133,15 @@ services:
       dockerfile: Dockerfile
       args:
         NEXT_PUBLIC_DIRECTUS_URL: ${NEXT_PUBLIC_DIRECTUS_URL}
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
         DIRECTUS_INTERNAL_URL: ${DIRECTUS_INTERNAL_URL}
         DIRECTUS_STATIC_TOKEN: ${DIRECTUS_STATIC_TOKEN}
+        API_TOKEN: ${API_TOKEN}
         API_TIMEOUT_MS: ${API_TIMEOUT_MS}
         NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY}
         NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE}
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
+        RECAPTCHA_SECRET_KEY: ${RECAPTCHA_SECRET_KEY}
     restart: ${RESTART_POLICY:-unless-stopped}
     environment:
       NODE_ENV: ${NODE_ENV}
@@ -149,6 +153,8 @@ services:
       API_TIMEOUT_MS: ${API_TIMEOUT_MS}
       NEXT_PUBLIC_MAPBOX_API_KEY: ${NEXT_PUBLIC_MAPBOX_API_KEY}
       NEXT_PUBLIC_MAPBOX_STYLE: ${NEXT_PUBLIC_MAPBOX_STYLE}
+      NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
+      RECAPTCHA_SECRET_KEY: ${RECAPTCHA_SECRET_KEY}
     depends_on:
       directus:
         condition: service_started
